--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.3.1",
+    "@prismicio/next": "^1.3.6",
+    "@prismicio/react": "^2.7.3",
+    "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.21",
+    "slice-machine-ui": "^1.18.0"
   }
 }
